[tool.poetry]
name = "scrambling"
version = "0.2.0"
description = "Protect unintended copy of your images by hiding the key in plain sight"
authors = ["Starmania <wycvhrt6vzscfpedxr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
stegano = "^0.11.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
