[tool.poetry]
name = "getscrambled"
version = "1.0.0"
description = "Protect unintended copy of your images by hiding the key in plain sight"
authors = ["Starmania <wycvhrt6vzscfpedxr@gmail.com>"]
readme = "README.md"
license = "CERN-OHL-P-2.0-1"
homepage = "https://github.com/Starmania/getscrambled"
repository = "https://github.com/Starmania/getscrambled"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
stegano = "^0.11.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
